# VMForge

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  rustfmt.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/agents/: build-engineer.md  console-engineer.md  frontend-engineer.md  hypervisor-engineer.md  network-engineer.md  qa-engineer.md  storage-engineer.md
.github/workflows/: ci.yml  release.yml
crates/vmforge-core/: Cargo.toml
crates/vmforge-core/src/: console.rs  error.rs  host.rs  hypervisor.rs  lib.rs  library.rs  model.rs  paths.rs  qemu_resolve.rs  settings.rs  storage.rs
crates/vmforge-core/src/qemu/: args.rs  engine.rs  firmware.rs  mod.rs  net.rs  process.rs  qmp.rs
crates/vmforge-core/tests/: boot.rs  network.rs  phase5.rs  snapshots.rs  x86_guest.rs
crates/vmforge-core/tests/fixtures/: qemu_img_info_snapshots.json
docs/: phase2-spec.md  phase3-spec.md  phase4-spec.md  phase5-spec.md  phase6-spec.md  windows-only-spec.md  windows-readiness-spec.md
src/: App.test.tsx  App.tsx  index.css  main.tsx  novnc.d.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: VncConsole.tsx
src/components/common/: AccelBadge.tsx  DirectoryPicker.tsx  Field.tsx  IsoPicker.tsx  LimitField.tsx  NetworkForm.test.tsx  NetworkForm.tsx  NetworkModeField.tsx  PortForwardRow.test.tsx  PortForwardRow.tsx  SharedFolderRow.test.tsx  SharedFolderRow.tsx  StatusBadge.tsx
src/components/console/: ConsoleView.tsx
src/components/editor/: HardwareEditorView.test.tsx  HardwareEditorView.tsx
src/components/editor/tabs/: MemoryTab.tsx  NetworkTab.tsx  ProcessorsTab.tsx  SharedFoldersTab.tsx
src/components/host/: HostProbeLoading.tsx  HostWarningsBanner.test.tsx  HostWarningsBanner.tsx  InstallInstructions.tsx  MissingBinaryList.tsx  QemuRequiredGate.test.tsx  QemuRequiredGate.tsx
src/components/layout/: AppShell.tsx
src/components/snapshots/: CloneVmDialog.test.tsx  CloneVmDialog.tsx  DeleteSnapshotDialog.tsx  EmptySnapshots.tsx  RestoreSnapshotDialog.tsx  SnapshotDetail.tsx  SnapshotNode.tsx  SnapshotsView.tsx  TakeSnapshotDialog.test.tsx  TakeSnapshotDialog.tsx  snapshotTree.test.ts  snapshotTree.ts
src/components/ui/: sonner.tsx
src/components/wizard/: NewVmWizard.tsx
src/components/wizard/steps/: StepBasics.tsx  StepCpuMemory.tsx  StepNetwork.tsx  StepReview.tsx  StepStorage.tsx
src/hooks/: useHostCaps.test.ts  useHostCaps.ts  useNetworkCaps.ts  useSnapshots.ts  useVmLibrary.test.ts  useVmLibrary.ts
src/lib/: format.ts  hostStatus.test.ts  hostStatus.ts  ipc.test.ts  ipc.ts  updater.test.ts  updater.ts  validation.test.ts  validation.ts
src/test/: setup.ts
