[workspace]
resolver = "2"
members = ["src-tauri", "crates/vmforge-core"]

# Shared metadata + dependency versions for every crate in the workspace.
# Pin real, installed versions here (see CLAUDE.md "Pinned versions").
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["VMForge contributors"]
repository = "https://github.com/calebohara/VMForge"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
directories = "6"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "net",
    "io-util",
    "sync",
    "time",
    "fs",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Profiles must live in the workspace root.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
