[package]
name = "vmforge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "VMForge — a VMware Workstation Pro–style VM manager built on QEMU"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin (Windows; see
# https://github.com/rust-lang/cargo/issues/8519).
name = "vmforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
vmforge-core = { path = "../crates/vmforge-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri-plugin-dialog = "2.7.1"
