[package]
name = "vmforge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "VMForge core engine: Hypervisor trait, QEMU/QMP control, disk/network/config managers"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
directories = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
