[package]
name = "vmforge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "VMForge core engine: Hypervisor trait, QEMU/QMP control, disk/network/config managers"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
directories = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
